<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editName"
        android:layout_width="288dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/name"
        android:textSize="20sp"
        android:hint="@string/name"
        android:autofillHints="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnGreeting"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="288dp"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:text="@string/greeting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editName" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="288dp"
        android:layout_height="193dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGreeting">

        <RadioButton
            android:id="@+id/radBtnMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mail"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/radBtnWeb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/web"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/radBtnCall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/call"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/radBtnAlarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alarm"
            android:textSize="14sp" />
    </RadioGroup>

    <Button
        android:id="@+id/btnAction"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="288dp"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:text="@string/action"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/btnAdd"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="288dp"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAction" />

    <TextView
        android:id="@+id/txtRandom"
        android:layout_width="288dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/result"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAdd" />
</androidx.constraintlayout.widget.ConstraintLayout>